--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -361,11 +361,7 @@
       "metadata": {
         "id": "_QIoRMbsqGwI",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 445
-        },
-        "outputId": "fb7ef385-f2f9-4c39-fa0a-dd96e311a2cd"
+        "colab": {}
       },
       "source": [
         "xx = []; yy = []; yy_predic=[]\n",
@@ -393,39 +389,8 @@
         "      pass \n",
         "print(\"Despues de organizar:\"+\"\\n\"+str(tabla)+\"\\n\")"
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x_valor = [[201908.0], [201906.0], [201809.0], [202006.0], [201703.0], [202008.0], [201807.0]]\n",
-            "\n",
-            "y_valor = [[19108.0], [19541.0], [21942.0], [20818.0], [42866.0], [25478.0], [23298.0]]\n",
-            "\n",
-            "y_predic[[19763.69433368746], [19735.39123676838], [22597.69421816696], [22994.709848449987], [30106.826162874764], [23060.448852677513], [22746.517089506146]]\n",
-            "\n",
-            "Antes de organizar:\n",
-            "[[201908.          19108.          19763.69433369]\n",
-            " [201906.          19541.          19735.39123677]\n",
-            " [201809.          21942.          22597.69421817]\n",
-            " [202006.          20818.          22994.70984845]\n",
-            " [201703.          42866.          30106.82616287]\n",
-            " [202008.          25478.          23060.44885268]\n",
-            " [201807.          23298.          22746.51708951]]\n",
-            "\n",
-            "Despues de organizar:\n",
-            "[[201703.          42866.          30106.82616287]\n",
-            " [201807.          23298.          22746.51708951]\n",
-            " [201809.          21942.          22597.69421817]\n",
-            " [201906.          19541.          19735.39123677]\n",
-            " [201908.          19108.          19763.69433369]\n",
-            " [202006.          20818.          22994.70984845]\n",
-            " [202008.          25478.          23060.44885268]]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -499,11 +464,7 @@
       "metadata": {
         "id": "_vn6bcP_39G6",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 952
-        },
-        "outputId": "4ee8d7e1-f6e4-4ca2-edb4-96f0527c622a"
+        "colab": {}
       },
       "source": [
         "xx_t = []; yy_t =[]; yy_predic_t=[]\n",
@@ -531,70 +492,8 @@
         "      pass \n",
         "print(\"Despues de organizar:\"+\"\\n\"+str(tabla_t)+\"\\n\")"
       ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x_valor_t = [          0\n",
-            "0  201907.0,           0\n",
-            "0  202002.0,           0\n",
-            "0  201904.0,           0\n",
-            "0  201705.0,           0\n",
-            "0  201711.0,           0\n",
-            "0  201902.0,           0\n",
-            "0  201905.0,           0\n",
-            "0  201712.0,           0\n",
-            "0  202003.0]\n",
-            "\n",
-            "y_valor_t = [         0\n",
-            "0  22054.0,          0\n",
-            "0  20935.0,          0\n",
-            "0  23713.0,          0\n",
-            "0  58684.0,          0\n",
-            "0  31413.0,          0\n",
-            "0  25505.0,          0\n",
-            "0  24479.0,          0\n",
-            "0  26733.0,          0\n",
-            "0  19992.0]\n",
-            "\n",
-            "y_predic_t[              0\n",
-            "0  23824.187826,               0\n",
-            "0  21116.341453,               0\n",
-            "0  23956.663254,               0\n",
-            "0  30336.155508,               0\n",
-            "0  30287.089385,               0\n",
-            "0  24044.799579,               0\n",
-            "0  23912.532481,               0\n",
-            "0  30276.681308,               0\n",
-            "0  21117.910312]\n",
-            "\n",
-            "Antes de organizar el test:\n",
-            "[[201907.          22054.          23824.18782589]\n",
-            " [202002.          20935.          21116.34145342]\n",
-            " [201904.          23713.          23956.6632545 ]\n",
-            " [201705.          58684.          30336.15550844]\n",
-            " [201711.          31413.          30287.08938531]\n",
-            " [201902.          25505.          24044.7995792 ]\n",
-            " [201905.          24479.          23912.53248125]\n",
-            " [201712.          26733.          30276.68130807]\n",
-            " [202003.          19992.          21117.91031205]]\n",
-            "\n",
-            "Despues de organizar:\n",
-            "[[201705.          58684.          30336.15550844]\n",
-            " [201711.          31413.          30287.08938531]\n",
-            " [201712.          26733.          30276.68130807]\n",
-            " [201902.          25505.          24044.7995792 ]\n",
-            " [201904.          23713.          23956.6632545 ]\n",
-            " [201905.          24479.          23912.53248125]\n",
-            " [201907.          22054.          23824.18782589]\n",
-            " [202002.          20935.          21116.34145342]\n",
-            " [202003.          19992.          21117.91031205]]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -690,35 +589,73 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "moOJWv5p_ab9",
+        "id": "cVv1egFjMLRy",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 71
+          "height": 136
         },
-        "outputId": "0fd56cf2-0eba-4815-ef16-fb0e5ef46500"
+        "outputId": "3076bbfa-6233-4176-dab5-87625ba3d089"
+      },
+      "source": [
+        "tabla"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[201703.        ,  42866.        ,  30106.82616287],\n",
+              "       [201807.        ,  23298.        ,  22746.51708951],\n",
+              "       [201809.        ,  21942.        ,  22597.69421817],\n",
+              "       [201906.        ,  19541.        ,  19735.39123677],\n",
+              "       [201908.        ,  19108.        ,  19763.69433369],\n",
+              "       [202006.        ,  20818.        ,  22994.70984845],\n",
+              "       [202008.        ,  25478.        ,  23060.44885268]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "moOJWv5p_ab9",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# Margen de Error entrenamiento\n",
-        "error_muestra = [];\n",
+        "error_muestra = []; x_train_muestra[]\n",
         "for i in range(ciclo):\n",
         "  calculo_error_muestra = (( tabla[i,1] - tabla[i,2] ) / tabla[i,1] ) * 100\n",
         "  error_muestra.append(calculo_error_muestra)\n",
+        "  x_train_muestra.append(tabla[i,1])\n",
+        "print(\"x train muestra = \"+str(x_train_muestra+\"\\n\"))\n",
         "print(\"error_muestra = \"+str(error_muestra)+\"\\n\")\n",
-        "# Organizamos y recreamos tabla \n",
-        "error_muestra.sort()"
+        "# Concatenamos \n",
+        "tabla_e_train = np.concatenate((x_train_muestra, error_muestra), axis=1)\n",
+        "print(\"Antes de organizar los datos:\"+\"\\n\"+str(tabla_e_train)+\"\\n\")\n",
+        "# Organizamos y recreamos los datos\n",
+        "tabla_e_train[:,0].sort()\n",
+        "for i in range(ciclo) :\n",
+        "  n_orgz =  tabla_e_train[i,0]\n",
+        "  for ii in range( ciclo ):\n",
+        "    n_norgz =  x_train_muestra[ii]\n",
+        "    if (int(n_norgz) == int(n_orgz)):\n",
+        "      tabla_e_train[i,1] = y_valor_t[ii]\n",
+        "      tabla_e_train[i,2]= y_predic_valor_t[ii]\n",
+        "    else:\n",
+        "      pass \n",
+        "print(\"Despues de organizar los datos:\"+\"\\n\"+str(tabla_e_train)+\"\\n\")"
       ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "error_muestra = [29.765254134104502, 2.3670826272377647, -2.9883065270575075, -0.9947865348159286, -3.4315173418853937, -10.455902817033277, 9.48877913228074]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -859,6 +796,80 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1PoyJJhGLyWE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "dd569f45-da9a-4ef6-f789-5c1bd5306a69"
+      },
+      "source": [
+        "error_muestra"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-10.455902817033277,\n",
+              " -3.4315173418853937,\n",
+              " -2.9883065270575075,\n",
+              " -0.9947865348159286,\n",
+              " 2.3670826272377647,\n",
+              " 9.48877913228074,\n",
+              " 29.765254134104502]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3L_lVh3vLz_9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "d129d8be-3bc6-4df8-a85a-dbaee439fc92"
+      },
+      "source": [
+        "error_test"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-13.255831025583065,\n",
+              " -8.02660662870456,\n",
+              " -5.631804281938475,\n",
+              " -1.0275513621140469,\n",
+              " -0.8662118625184153,\n",
+              " 2.314095832141478,\n",
+              " 3.584218682356386,\n",
+              " 5.725153580859507,\n",
+              " 48.30591727141453]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
         }
       ]
     }
