--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -627,20 +627,24 @@
       "metadata": {
         "id": "moOJWv5p_ab9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 354
+        },
+        "outputId": "583fddeb-fb3e-4908-babf-749f4c62c855"
       },
       "source": [
         "# Margen de Error entrenamiento\n",
-        "error_muestra = []; x_train_muestra[]\n",
+        "error_muestra= []; x_train_muestra=[]\n",
         "for i in range(ciclo):\n",
         "  calculo_error_muestra = (( tabla[i,1] - tabla[i,2] ) / tabla[i,1] ) * 100\n",
         "  error_muestra.append(calculo_error_muestra)\n",
         "  x_train_muestra.append(tabla[i,1])\n",
-        "print(\"x train muestra = \"+str(x_train_muestra+\"\\n\"))\n",
-        "print(\"error_muestra = \"+str(error_muestra)+\"\\n\")\n",
+        "print(\"x train muestra = \"+str(x_train_muestra)+\"\\n\")\n",
+        "print(\"error_muestra = \" +str(error_muestra)+\"\\n\")\n",
         "# Concatenamos \n",
-        "tabla_e_train = np.concatenate((x_train_muestra, error_muestra), axis=1)\n",
-        "print(\"Antes de organizar los datos:\"+\"\\n\"+str(tabla_e_train)+\"\\n\")\n",
+        "tabla_error = np.concatenate((x_train_muestra, error_muestra), axis=1)\n",
+        "print(\"Antes de organizar los datos:\"+str(tabla_e_train)+\"\\n\")\n",
         "# Organizamos y recreamos los datos\n",
         "tabla_e_train[:,0].sort()\n",
         "for i in range(ciclo) :\n",
@@ -648,14 +652,36 @@
         "  for ii in range( ciclo ):\n",
         "    n_norgz =  x_train_muestra[ii]\n",
         "    if (int(n_norgz) == int(n_orgz)):\n",
-        "      tabla_e_train[i,1] = y_valor_t[ii]\n",
-        "      tabla_e_train[i,2]= y_predic_valor_t[ii]\n",
+        "      tabla_e_train[i,1] = error_muestra[ii]\n",
         "    else:\n",
         "      pass \n",
         "print(\"Despues de organizar los datos:\"+\"\\n\"+str(tabla_e_train)+\"\\n\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x train muestra = [42866.0, 23298.0, 21942.0, 19541.0, 19108.0, 20818.0, 25478.0]\n",
+            "\n",
+            "error_muestra = [29.765254134104502, 2.3670826272377647, -2.9883065270575075, -0.9947865348159286, -3.4315173418853937, -10.455902817033277, 9.48877913228074]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "AxisError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-49-bf606b621e3e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"error_muestra = \"\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_muestra\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# Concatenamos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mtabla_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train_muestra\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merror_muestra\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Antes de organizar los datos:\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtabla_e_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# Organizamos y recreamos los datos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[0;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
