--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -361,7 +361,11 @@
       "metadata": {
         "id": "_QIoRMbsqGwI",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 445
+        },
+        "outputId": "3394a5a4-be83-4a7e-a5dc-0e9ba2c8e3d0"
       },
       "source": [
         "xx = []; yy = []; yy_predic=[]\n",
@@ -389,8 +393,39 @@
         "      pass \n",
         "print(\"Despues de organizar:\"+\"\\n\"+str(tabla)+\"\\n\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x_valor = [[201908.0], [201906.0], [201809.0], [202006.0], [201703.0], [202008.0], [201807.0]]\n",
+            "\n",
+            "y_valor = [[19108.0], [19541.0], [21942.0], [20818.0], [42866.0], [25478.0], [23298.0]]\n",
+            "\n",
+            "y_predic[[19763.69433368746], [19735.39123676838], [22597.69421816696], [22994.709848449987], [30106.826162874764], [23060.448852677513], [22746.517089506146]]\n",
+            "\n",
+            "Antes de organizar:\n",
+            "[[201908.          19108.          19763.69433369]\n",
+            " [201906.          19541.          19735.39123677]\n",
+            " [201809.          21942.          22597.69421817]\n",
+            " [202006.          20818.          22994.70984845]\n",
+            " [201703.          42866.          30106.82616287]\n",
+            " [202008.          25478.          23060.44885268]\n",
+            " [201807.          23298.          22746.51708951]]\n",
+            "\n",
+            "Despues de organizar:\n",
+            "[[201703.          42866.          30106.82616287]\n",
+            " [201807.          23298.          22746.51708951]\n",
+            " [201809.          21942.          22597.69421817]\n",
+            " [201906.          19541.          19735.39123677]\n",
+            " [201908.          19108.          19763.69433369]\n",
+            " [202006.          20818.          22994.70984845]\n",
+            " [202008.          25478.          23060.44885268]]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -629,9 +664,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 334
+          "height": 385
         },
-        "outputId": "67cbb877-2142-4ca7-a785-cbae2cd20e08"
+        "outputId": "f63705e4-5902-4dc3-e103-ff713ea3bc6c"
       },
       "source": [
         "# Margen de Error entrenamiento\n",
@@ -644,7 +679,9 @@
         "print(\"x train muestra = \"+str(x_train_muestra)+\"\\n\")\n",
         "print(\"error_muestra = \" +str(error_muestra)+\"\\n\")\n",
         "# Concatenamos \n",
-        "tabla_error = np.concatenate((x_train_muestra, error_muestra), axis=1)\n",
+        "var1 = pd.DataFrame(np.array([x_train_muestra]))\n",
+        "var2 = pd.DataFrame(np.array([error_muestra]))\n",
+        "tabla_error = np.concatenate((var1, var2),axis=1)\n",
         "print(\"Antes de organizar los datos:\"+str(tabla_error)+\"\\n\")\n",
         "# Organizamos y recreamos los datos\n",
         "tabla_error[:,0].sort()\n",
@@ -658,7 +695,7 @@
         "      pass \n",
         "print(\"Despues de organizar los datos:\"+\"\\n\"+str(tabla_error)+\"\\n\")"
       ],
-      "execution_count": 58,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,21 +703,129 @@
             "x train muestra = [42866.0, 23298.0, 21942.0, 19541.0, 19108.0, 20818.0, 25478.0]\n",
             "\n",
             "error_muestra = [29.765254134104502, 2.3670826272377647, 2.9883065270575075, 0.9947865348159286, 3.4315173418853937, 10.455902817033277, 9.48877913228074]\n",
+            "\n",
+            "Antes de organizar los datos:[[4.28660000e+04 2.32980000e+04 2.19420000e+04 1.95410000e+04\n",
+            "  1.91080000e+04 2.08180000e+04 2.54780000e+04 2.97652541e+01\n",
+            "  2.36708263e+00 2.98830653e+00 9.94786535e-01 3.43151734e+00\n",
+            "  1.04559028e+01 9.48877913e+00]]\n",
             "\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "error",
-          "ename": "AxisError",
+          "ename": "IndexError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-58-bbf48420866f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"error_muestra = \"\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_muestra\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Concatenamos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mtabla_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train_muestra\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merror_muestra\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Antes de organizar los datos:\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtabla_error\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Organizamos y recreamos los datos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-            "\u001b[0;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-76-a9d85542183e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mtabla_error\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mciclo\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m   \u001b[0mn_orgz\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mtabla_error\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mii\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mciclo\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mn_norgz\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mx_train_muestra\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mii\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jZ61MkXmW4G_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        },
+        "outputId": "f1cad821-b210-42b2-b404-f8c0afcce893"
+      },
+      "source": [
+        "pd.DataFrame(np.array([error_muestra]))"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "      <th>1</th>\n",
+              "      <th>2</th>\n",
+              "      <th>3</th>\n",
+              "      <th>4</th>\n",
+              "      <th>5</th>\n",
+              "      <th>6</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>29.765254</td>\n",
+              "      <td>2.367083</td>\n",
+              "      <td>2.988307</td>\n",
+              "      <td>0.994787</td>\n",
+              "      <td>3.431517</td>\n",
+              "      <td>10.455903</td>\n",
+              "      <td>9.488779</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           0         1         2         3         4          5         6\n",
+              "0  29.765254  2.367083  2.988307  0.994787  3.431517  10.455903  9.488779"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YPxxbbJaW05u",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "02e75775-85b3-4e42-cced-e8a5d486f44e"
+      },
+      "source": [
+        "type(x_train_muestra)"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
         }
       ]
     },
