--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -650,24 +650,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f44387af-c85d-4b3d-a5dc-aefe97d4096d"
+        "outputId": "abcfa6a3-3572-4976-d9df-c4439edd0066"
       },
       "source": [
-        "type(tabla[1,1])"
+        "tabla[1,0]"
       ],
-      "execution_count": 36,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "numpy.float64"
+              "201807.0"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 59
         }
       ]
     },
@@ -708,26 +708,32 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 136
         },
-        "outputId": "6010c5de-f245-47af-b1a7-1ec30462ba88"
+        "outputId": "02797112-fadb-4756-bb0b-569c8d8bd50b"
       },
       "source": [
-        "type(x_train_muestra)"
+        "var2"
       ],
-      "execution_count": 43,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "list"
+              "array([[42866.],\n",
+              "       [23298.],\n",
+              "       [21942.],\n",
+              "       [19541.],\n",
+              "       [19108.],\n",
+              "       [20818.],\n",
+              "       [25478.]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 66
         }
       ]
     },
@@ -830,13 +836,99 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "moOJWv5p_ab9",
+        "id": "pMuRtTuw-w9G",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 374
+          "height": 34
         },
-        "outputId": "b7628a2c-df39-44c1-82f4-72b2ab2fe226"
+        "outputId": "da7167d6-4d4c-4ae3-b1b4-25ad273a5444"
+      },
+      "source": [
+        "tabla[2,1]"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21942.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "135CVO6r_ZSG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f640dba8-8f4a-44c3-8b12-8d6d23a4093a"
+      },
+      "source": [
+        "tabla_error[1,0]"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "19541.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fPlACHpt_qmO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c3111e0a-c3a6-4c38-8fdc-f7bf4f1490f3"
+      },
+      "source": [
+        "tabla_error[1,1]"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9947865348159286"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "moOJWv5p_ab9",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# Margen de Error entrenamiento\n",
@@ -858,43 +950,15 @@
         "for i in range(ciclo) :\n",
         "  n_orgz =  tabla_error[i,0]\n",
         "  for ii in range( ciclo ):\n",
-        "    n_norgz =  x_train_muestra[ii]\n",
+        "    n_norgz =  var2[ii]\n",
         "    if (int(n_norgz) == int(n_orgz)):\n",
         "      tabla_error[i,1] = error_muestra[ii]\n",
         "    else:\n",
         "      pass \n",
         "print(\"Despues de organizar los datos:\"+\"\\n\"+str(tabla_error)+\"\\n\")"
       ],
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "x train muestra = [42866.0, 23298.0, 21942.0, 19541.0, 19108.0, 20818.0, 25478.0]\n",
-            "\n",
-            "error_muestra = [29.765254134104502, 2.3670826272377647, 2.9883065270575075, 0.9947865348159286, 3.4315173418853937, 10.455902817033277, 9.48877913228074]\n",
-            "\n",
-            "Antes de organizar los datos:[[4.28660000e+04 2.97652541e+01]\n",
-            " [2.32980000e+04 2.36708263e+00]\n",
-            " [2.19420000e+04 2.98830653e+00]\n",
-            " [1.95410000e+04 9.94786535e-01]\n",
-            " [1.91080000e+04 3.43151734e+00]\n",
-            " [2.08180000e+04 1.04559028e+01]\n",
-            " [2.54780000e+04 9.48877913e+00]]\n",
-            "\n",
-            "Despues de organizar los datos:\n",
-            "[[1.91080000e+04 3.43151734e+00]\n",
-            " [1.95410000e+04 9.94786535e-01]\n",
-            " [2.08180000e+04 1.04559028e+01]\n",
-            " [2.19420000e+04 2.98830653e+00]\n",
-            " [2.32980000e+04 2.36708263e+00]\n",
-            " [2.54780000e+04 9.48877913e+00]\n",
-            " [4.28660000e+04 2.97652541e+01]]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
