--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -644,291 +644,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6sCXB5jf6CtN",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "abcfa6a3-3572-4976-d9df-c4439edd0066"
-      },
-      "source": [
-        "tabla[1,0]"
-      ],
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "201807.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 59
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "EOpJQmig6-VZ",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "6154c22e-357d-4565-fabf-5428fd7e7f88"
-      },
-      "source": [
-        "type(calculo_error_muestra)"
-      ],
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "numpy.float64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 38
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "IswqTlMm7E9n",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        },
-        "outputId": "02797112-fadb-4756-bb0b-569c8d8bd50b"
-      },
-      "source": [
-        "var2"
-      ],
-      "execution_count": 66,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[42866.],\n",
-              "       [23298.],\n",
-              "       [21942.],\n",
-              "       [19541.],\n",
-              "       [19108.],\n",
-              "       [20818.],\n",
-              "       [25478.]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 66
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TI7MdUnz7NJF",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "4db792ab-0526-4432-ea95-1cb46ba18b23"
-      },
-      "source": [
-        "type(error_muestra)"
-      ],
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "list"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 42
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SO4vHsMh8ij_",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        },
-        "outputId": "b0fd3b4a-067f-47c4-9bf8-31641e34d70d"
-      },
-      "source": [
-        "np.array([error_muestra]).T"
-      ],
-      "execution_count": 56,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[29.76525413],\n",
-              "       [ 2.36708263],\n",
-              "       [ 2.98830653],\n",
-              "       [ 0.99478653],\n",
-              "       [ 3.43151734],\n",
-              "       [10.45590282],\n",
-              "       [ 9.48877913]])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 56
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rm_GK1lO8mSp",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "1da3eba9-c3f1-4cf9-c802-6abc7cf1f6e6"
-      },
-      "source": [
-        "x_train_muestra"
-      ],
-      "execution_count": 46,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[42866.0, 23298.0, 21942.0, 19541.0, 19108.0, 20818.0, 25478.0]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 46
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pMuRtTuw-w9G",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "da7167d6-4d4c-4ae3-b1b4-25ad273a5444"
-      },
-      "source": [
-        "tabla[2,1]"
-      ],
-      "execution_count": 62,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "21942.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 62
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "135CVO6r_ZSG",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "f640dba8-8f4a-44c3-8b12-8d6d23a4093a"
-      },
-      "source": [
-        "tabla_error[1,0]"
-      ],
-      "execution_count": 64,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "19541.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 64
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fPlACHpt_qmO",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c3111e0a-c3a6-4c38-8fdc-f7bf4f1490f3"
-      },
-      "source": [
-        "tabla_error[1,1]"
-      ],
-      "execution_count": 65,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9947865348159286"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 65
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "moOJWv5p_ab9",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 374
+        },
+        "outputId": "767702dd-ce92-47c3-8183-cf55f17194cf"
       },
       "source": [
         "# Margen de Error entrenamiento\n",
@@ -937,10 +659,10 @@
         "  calculo_error_muestra = (( tabla[i,1] - tabla[i,2] ) / tabla[i,1] ) * 100\n",
         "  calculo_error_muestra = abs(calculo_error_muestra)\n",
         "  error_muestra.append(calculo_error_muestra)\n",
-        "  x_train_muestra.append(tabla[i,1])\n",
+        "  x_train_muestra.append(int(tabla[i,0]))\n",
         "print(\"x train muestra = \"+str(x_train_muestra)+\"\\n\")\n",
         "print(\"error_muestra = \" +str(error_muestra)+\"\\n\")\n",
-        "# Concatenamos \n",
+        "# Concatenamos  \n",
         "var1=np.array([error_muestra]).T\n",
         "var2=np.array([x_train_muestra]).T\n",
         "tabla_error = np.concatenate((var2, var1),axis=1)\n",
@@ -957,8 +679,36 @@
         "      pass \n",
         "print(\"Despues de organizar los datos:\"+\"\\n\"+str(tabla_error)+\"\\n\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x train muestra = [201703, 201807, 201809, 201906, 201908, 202006, 202008]\n",
+            "\n",
+            "error_muestra = [29.765254134104502, 2.3670826272377647, 2.9883065270575075, 0.9947865348159286, 3.4315173418853937, 10.455902817033277, 9.48877913228074]\n",
+            "\n",
+            "Antes de organizar los datos:[[2.01703000e+05 2.97652541e+01]\n",
+            " [2.01807000e+05 2.36708263e+00]\n",
+            " [2.01809000e+05 2.98830653e+00]\n",
+            " [2.01906000e+05 9.94786535e-01]\n",
+            " [2.01908000e+05 3.43151734e+00]\n",
+            " [2.02006000e+05 1.04559028e+01]\n",
+            " [2.02008000e+05 9.48877913e+00]]\n",
+            "\n",
+            "Despues de organizar los datos:\n",
+            "[[2.01703000e+05 2.97652541e+01]\n",
+            " [2.01807000e+05 2.36708263e+00]\n",
+            " [2.01809000e+05 2.98830653e+00]\n",
+            " [2.01906000e+05 9.94786535e-01]\n",
+            " [2.01908000e+05 3.43151734e+00]\n",
+            " [2.02006000e+05 1.04559028e+01]\n",
+            " [2.02008000e+05 9.48877913e+00]]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
