--- a/Regresión/Regresion_SVR_Bajas_MES.ipynb
+++ b/Regresión/Regresion_SVR_Bajas_MES.ipynb
@@ -729,96 +729,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "js6wvIYDDuyM",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "dba9cc67-5b96-4022-ef44-c4907e0e95c2"
-      },
-      "source": [
-        "tabla_error[:,1]"
-      ],
-      "execution_count": 109,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([29.76525413,  2.36708263,  2.98830653,  0.99478653,  3.43151734,\n",
-              "       10.45590282,  9.48877913])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 109
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JPj55xW0Dowr",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "e922f798-26a8-4c46-d2c5-2a7f2d1f3850"
-      },
-      "source": [
-        "tabla_error[:,0]"
-      ],
-      "execution_count": 110,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([201703., 201807., 201809., 201906., 201908., 202006., 202008.])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 110
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "mXcK-MWEJF77",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
-        },
-        "outputId": "edaf362a-7a51-4a76-b5d6-2a72f15b2d47"
+        "colab": {}
       },
       "source": [
-        "# Margen de error Test\n",
-        "error_test = [];\n",
-        "for i in range( total_ciclo ):\n",
-        "  calculo_error_test = (( tabla_t[i,1] - tabla_t[i,2] ) / tabla_t[i,1] ) * 100\n",
-        "  error_test.append(calculo_error_test)\n",
-        "print(\"error_test = \"+str(error_test)+\"\\n\")\n",
-        "# Organizamos y recreamos tabla \n",
-        "error_test.sort()"
+        "# Margen de error Test.. ojo quede aqui\n",
+        "error_test = []; x_train_test =[]\n",
+        "for i in range(ciclo):\n",
+        "  calculo_error_muestra = (( tabla[i,1] - tabla[i,2] ) / tabla[i,1] ) * 100\n",
+        "  calculo_error_muestra = abs(calculo_error_muestra)\n",
+        "  error_muestra.append(calculo_error_muestra)\n",
+        "  x_train_muestra.append(int(tabla[i,0]))\n",
+        "print(\"x train muestra = \"+str(x_train_muestra)+\"\\n\")\n",
+        "print(\"error_muestra = \" +str(error_muestra)+\"\\n\")\n",
+        "# Concatenamos  \n",
+        "var1=np.array([error_muestra]).T\n",
+        "var2=np.array([x_train_muestra]).T\n",
+        "tabla_error = np.concatenate((var2, var1),axis=1)\n",
+        "print(\"Antes de organizar los datos:\"+str(tabla_error)+\"\\n\")\n",
+        "# Organizamos y recreamos los datos\n",
+        "tabla_error[:,0].sort()\n",
+        "for i in range(ciclo) :\n",
+        "  n_orgz =  tabla_error[i,0]\n",
+        "  for ii in range( ciclo ):\n",
+        "    n_norgz =  var2[ii]\n",
+        "    if (int(n_norgz) == int(n_orgz)):\n",
+        "      tabla_error[i,1] = error_muestra[ii]\n",
+        "    else:\n",
+        "      pass \n",
+        "print(\"Despues de organizar los datos:\"+\"\\n\"+str(tabla_error)+\"\\n\")"
       ],
-      "execution_count": 111,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "error_test = [48.30591727141453, 3.584218682356386, -13.255831025583065, 5.725153580859507, -1.0275513621140469, 2.314095832141478, -8.02660662870456, -0.8662118625184153, -5.631804281938475]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
